<resources>
    <string name="app_name_1">Почти Военная Тайна</string>
    <string name="mimicry_app_name">MoodSound Galaxy</string>
    <string name="app_name_in_main_page">Почти военная тайна</string>
    <string name="disguise_btn">Маскировка</string>
    <string name="search">Поиск</string>
    <string name="button_back">Назад</string>
    <string name="button_item_loader">Добавить</string>
    <string name="storage_log">Журнал хранения</string>
    <string name="button_settings">Настройки</string>
    <string name="dark_mod">Темная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Политика конфиденциальности</string>
    <string name="share_app_text">Почти военная тайна - cкрытая галерея для хранения закодированных изображений с ограниченным доступом:
        https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="share_app_text2">Файл зашифрован в My Shadow Gallery. Для просмотра запросите ключ у того, кто отправил вам это сообщение и используйте дешифратор
        https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="share_app_title">Поделиться приложением</string>
    <string name="support_email">mailto:a9633238@gmail.com</string>
    <string name="support_email_subject">Разработчику</string>
    <string name="support_email_text">Разработчик, ты просто красавчик!</string>
    <string name="user_agreement_url">https://raw.githubusercontent.com/AlexeyJarlax/Privacy-Policy-1.8.txt/main/Privacy-Policy-1.8.txt</string>
    <string name="heading_search_history_list_view">История запросов поисковой строки:</string>
    <string name="todo">Туду</string>
    <string name="there_wil_be_media_library">в этом окне будет медиатека</string>
    <string name="cam_bat_hide">Скрыть\nкамеру</string>
    <string name="cam_bat_start">Запустить\nкамеру</string>
    <string name="cam_bat">Камера</string>
    <string name="snapshot">Сделать\nснимок</string>
    <string name="galery">Загрузить\nфайл</string>
    <string name="mountin_switch">Визуальный стиль:\nКототека / Горы</string>
    <string name="sample">Один два три</string>
    <string name="about_app">О приложении</string>
    <string name="about_app_long1">Приложение для тех, у кого есть секреты...</string>
    <string name="about_app_long2">Приложение снимает и хранит фотографии в закодированном виде. Изображения недоступны для галереи и других приложений.
    Вход в приложение защищен паролем и маскировочным функционалом под музыкальное приложение. Изображения, сохраненные с помощью шифрования, невозможно
    прочесть без ключа даже если извлечь файл из телефона. Концепция безопасности: все данные хранятся только на устройстве пользователя, серверная архитектура
    хранения пользовательских изображений, превью, ключей, паролей не применяется. Тем не менее, сам
    пользователь может делиться изображениями как в зашифрованном,
    так и дешифрованном виде. Получать изображения от других пользователей и дешифровать их,
    используя аналогичный ключ шифрования.</string>
    <string name="about_app_long3">Особенности хранения данных:</string>
    <string name="about_app_long4">- Превью хранятся во внутреннем каталоге приложения с расширением .p и не шифруются. Масштаб превью в пикселях от 1х1 px
    до 100х100 px можно выбрать в Настройках.
\n\n
- Оригиналы изображений хранятся во внутреннем каталоге приложения. В случае, когда используется шифрование, файл сохраняется с расширением .kk. Если же
    пользователь выбрал опцию не использовать шифрование, файл сохраняется с расширением .o. Когда пользователь делится расшифрованным изображением, создается
    временный файл с расширением .peekaboo. В таком виде файл можно отправить любым доступным устройству способом. Как только пользователь закрывает окно просмотра
    этого изображения - расшифрованный экземпляр удаляется с устройства. То есть, зашифрованные изображения хранятся только в зашифрованном виде. Изменить настройки
    использования шифрования пользователь может через меню Настройки.
\n\n
- Ключ шифрования и пароль хранятся на устройстве в защищенной форме. В целях безопасности не предусмотрена возможность восстановления ключа и пароля.
    Если вы забыли пароль для входа в приложение, лучшим решением будет удалить приложение и установить вновь. В случае утраты ключа шифрования вы можете создать
    другой ключ без переустановки приложения, однако изображения, сохраненные со старым ключом, будут недоступны к просмотру. Очистить хранилище изображений,
    сменить ключ или пароль можно через меню Настройки.</string>
    <string name="about_app_long5">Особенности работы системы шифрования</string>
    <string name="about_app_long6">У приложения имеется три режима для системы шифрования:\n\n
1. БЕЗ ШИФРОВАНИЯ. Сохранение файлов без ввода ключа шифрования – файлы сохраняются на устройстве в недоступном другим приложениям и галерее формате, однако
        злоумышленник сможет извлечь и считать их, если завладеет устройством. Получив отправленный с устройства файл, он сможет считать содержимое.\n\n
2. ПОСТОЯННЫЙ КЛЮЧ ШИФРОВАНИЯ (оптимальный вариант). Пользователь придумывает, либо генерирует ключ шифрования. Ключ используется для шифрования файла в соответствии
        с Advanced Encryption Standard. Файл хранится на устройстве в зашифрованном виде и, даже получив доступ к памяти устройства (или получив отправленный с
        устройства зашифрованный файл), злоумышленник не сможет считать содержимое без ключа шифрования. Ключ хранится в приложении в защищенном хэш-функцией виде.
        Пользователь может создать и хранить в приложении до трех ключей\n\n
3. ПЕРЕМЕННЫЙ КЛЮЧ ШИФРОВАНИЯ. Если пользователь выставит галочку \"Не сохранять ключ шифрования\", ключ не будет храниться в приложении, а будет запрашивается каждый раз
        при входе. Ключ существует в приложении пока оно открыто. Самый высокий уровень безопасности, однако, если вы забыли старый ключ,
        сохраненные ранее этим ключом файлы не будут доступны для просмотра. В меню Настройки вы всегда можете изменить опции безопасности.</string>
    <string name="clearing_the_storage">Очистить хранилище</string>
    <string name="key_input_clear">Удалять ключ при закрытии сессии \n(ключ будет запрашиваться при входе)</string>
    <string name="preview_off">Использовать ключ шифрования</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="any_mistake">тут будет сообщение об ошибке,\nиконка поменяется в зависимости\nот характера ошибки</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="clear_the_history">Очистить историю</string>
    <string name="added">Добавлен: </string>
    <string name="preview_scaling_factor">Коэффициент скалирования превью(px):</string>
    <string name="reset_settings">Очистить все данные</string>
    <string name="reset_settings_confirm">Очистить все данные: персональные данные, настройки, ключь, пароль, хранилище. Подтвердить? </string>
    <string name="personal_data">Персональные данные</string>
    <string name="disguise_it_as_a_music_player">Замаскировать под музыкальный плеер</string>
    <string name="language">Язык/language/应用语言/idioma</string>
    <string name="goAhead">Вперед!</string>
    <string name="input">Подтвердить ввод</string>
    <string name="noinput">Отказ от ввода</string>
    <string name="step00">\nНастроим безопасность,\nтри простых шага\n🔐️ 🕶️ 🔏</string>
    <string name="step01_01">\n🔐️\nШаг 1\nИспользовать пароль для входа в приложение?\n</string>
    <string name="del_pass">🗑️ Удалить пароль</string>
    <string name="step03_01">Шифрование изображений🔏\nПозволить приложению сгенерировать уникальный ключ шифрования,
    либо создать свой. Ключ используется для шифрования с уровнем защиты Advanced Encryption Standard. Изображения и ключ
    хранится на устройстве в безопасном зашифрованном виде</string>
    <string name="storage">Хранилище</string>
    <string name="key_byte_count_message">Рекомендуется добавить (байт):</string>
    <string name="encryption_key_set">Ключ шифрования задан</string>
    <string name="encryption_mode_set_no_encryption">Задан режим сохранения: без шифрования</string>
    <string name="encryption_key_not_set">Ключ шифрования не задан</string>
    <string name="create_encryption_key">Создаем ключ шифрования</string>
    <string name="generate">Сгенерировать</string>
    <string name="helper_text_prefix">Рекомендуется добавить: %1$d байт</string>
    <string name="do_not_add_key">Не использовать ключ шифрования</string>
    <string name="constant_key">Постоянный ключ</string>
    <string name="variable_key">Переменный ключ</string>
    <string name="old_key_button_text">В хранилище обнаружены ранее сохраненные ключи шифрования. Нажмите на название ключа, чтобы выбрать его ключом по умолчанию.
        Нажмите кнопку "Корзина", чтобы удалить ключ</string>
    <string name="developers_page">Страница разработчика</string>
    <string name="developers_page_url">https://play.google.com/store/apps/dev?id=8406991842366944145</string>
    <string name="wait">ожидайте…</string>
    <string name="password">Пароль</string>
    <string name="invalid_character">недопустимый символ</string>
    <string name="repit_password">Введите пароль еще раз</string>
    <string name="wrong_password">Пароль не совпадает, повторите ввод</string>
    <string name="save_password">Пароль сохранен</string>
    <string name="to_change_password">Для смены пароля введите старый и новый пароли</string>
    <string name="del_password">Пароль успешно удален</string>
    <string name="try_left">"Попыток осталось: "</string>
    <string name="last_warning">! После последней попытки произойдет сброс настроек и очистка хранилища !</string>
    <string name="new_password">Новый пароль</string>
    <string name="old_password">Старый пароль</string>
    <string name="how_to_share_picture">Как отправить изображение?</string>
    <string name="how_to_accept_picture">Как получить изображение?</string>
    <string name="how_to_sett_secure">Как настроить безопасность?</string>
    <string name="how_to_add_picture">Как добавить изображение?</string>
    <string name="how_does_the_key_works_details">ADVANCED ENCRYPTION STANDARD\n\nФункция приложения реализует алгоритм шифрования для изображений с использованием
AES (Advanced Encryption Standard).
Этот алгоритм использует симметричный ключ и применяет стандарт AES для обеспечения безопасности изображения в процессе передачи или хранения. \n\n
Общий процесс:\n- Создание и извлечение мастер-ключа из приложения для использования в качестве основы для создания ключа шифрования;\n
- Применение хеш-функции SHA к мастер-ключу для получения фиксированной длины ключа;\nИспользование ключа для инициализации объекта шифра с использованием
алгоритма AES;\n- Процесс шифрования данных из исходного потока с использованием AES;\n- Зашифрованные данные записываются в выходной файл;
\n- Закрытие потоков.\n\nХеш-функция SHA (Secure Hash Algorithm). Вот несколько ключевых характеристик:\n- Длина хеша. SHA производит хеш-значение
фиксированной длины (в целях безопасности длина хеш-значения не раскрывается).\n- Устойчивость к коллизиям. SHA предоставляет высокий уровень устойчивости
к коллизиям. Коллизии возникают, когда два различных входных сообщения порождают одинаковые хеш-значения. Для SHA коллизии могут быть теоретически возможны, но их
появление требует огромного объема вычислительных ресурсов.\n- Мастер-ключ приложения используется как основа для создания ключа шифрования. Чтобы привести
мастер-ключ к фиксированной длине и применяется SHA. Это гарантирует, что вне зависимости от длины исходного мастер-ключа, результатом будет хеш
фиксированной длины, который затем можно использовать как ключ шифрования.</string>
</resources>