<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainPageActivity"
    android:id="@+id/main_activity_layout">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:scaleType="centerCrop" />

    <LinearLayout
        style="@style/FrontMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp8"
                    android:padding="@dimen/dp16"
                    android:text="@string/app_name_in_main_page"
                    android:textColor="@color/yp_black_and_yp_white"
                    android:textSize="@dimen/text_size_sp22" />

                <Button
                    android:id="@+id/button_login"
                    style="@style/LoginButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp36"
                    android:layout_margin="@dimen/dp4"
                    android:maxLines="1"
                    android:text=""/>

            </LinearLayout>

            <Button
                android:id="@+id/button_item_loader"
                style="@style/MainMenuButtons"
                android:text="@string/button_item_loader"
                app:icon="@android:drawable/ic_menu_add"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_gallery"
                style="@style/MainMenuButtons"
                android:text="@string/storage"
                app:icon="@android:drawable/ic_dialog_dialer"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_storage_log"
                style="@style/MainMenuButtons"
                android:text="@string/storage_log"
                app:icon="@android:drawable/ic_input_get"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_search"
                style="@style/MainMenuButtons"
                android:text="@string/disguise_btn"
                app:icon="@android:drawable/ic_menu_view"
                tools:ignore="VisualLintButtonSize" />
            <!--                android:visibility="gone"-->
            <Button
                android:id="@+id/button_settings"
                style="@style/MainMenuButtons"
                android:text="@string/button_settings"
                app:icon="@android:drawable/ic_menu_preferences"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>