<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FAQActivity">

    <Button
        android:id="@+id/button_back_from_abouttheapp"
        style="@style/GoBackButtons"
        android:background="@android:color/transparent"
        android:text="@string/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <VideoView
        android:id="@+id/videoView0"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:alpha="0.0"
        android:fitsSystemWindows="true"
        android:scaleType="fitCenter"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_back_from_abouttheapp" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"
        android:layout_marginBottom="@dimen/dp12"
        android:layout_marginTop="@dimen/dp12"
        android:background="@color/yp_text_gray_and_yp_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoView0" />

    <Button
        android:id="@+id/button_how_to_add_picture"
        style="@style/SettingsButtonsAndText2"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/how_to_add_picture"
        app:icon="@android:drawable/ic_menu_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <Button
        android:id="@+id/button_settings_share"
        style="@style/SettingsButtonsAndText3"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/how_to_share_picture"
        app:icon="@android:drawable/ic_dialog_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_how_to_add_picture"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button_how_to_accept_picture"
        style="@style/SettingsButtonsAndText3"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/how_to_accept_picture"
        app:icon="@android:drawable/ic_menu_share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_settings_share"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button_how_to_sett_secure"
        style="@style/SettingsButtonsAndText2"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/how_to_sett_secure"
        app:icon="@android:drawable/ic_lock_idle_low_battery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_how_to_accept_picture"
        tools:ignore="VisualLintButtonSize" />

    <View
        android:id="@+id/view2"
        style="@style/SettingsButtonsAndText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"
        android:layout_gravity="start"
        android:gravity="start|end|center_vertical"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>